--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2048</title>
+    <title>Цветочная поляна</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="background"></div>
     <div class="container">
         <header class="header">
-            <h1>2048</h1>
+            <h1 class="title">
+                <span class="gradient-text">Цветочная</span>
+                <span class="plain-text">поляна</span>
+            </h1>
             <div class="stats">
                 <div class="stat">
                     <span class="label">Счет</span>
@@ -29,11 +33,73 @@
                 </div>
                 
                 <div class="controls">
-                    <button id="new-game" class="btn btn-primary">Новая игра</button>
-                    <button id="undo" class="btn btn-secondary" disabled>Отменить ход</button>
+                    <button id="new-game" class="btn btn-primary">
+                        <span class="btn-icon">🌸</span>
+                        Новая игра
+                    </button>
+                    <button id="undo" class="btn btn-secondary" disabled>
+                        <span class="btn-icon">↶</span>
+                        Отменить ход
+                    </button>
+                    <button id="show-leaders" class="btn btn-secondary">
+                        <span class="btn-icon">🏆</span>
+                        Таблица лидеров
+                    </button>
                 </div>
             </div>
         </main>
+
+        <div id="game-over" class="modal hidden">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2>Игра окончена! 🌸</h2>
+                </div>
+                <div class="modal-body">
+                    <p class="final-score">Ваш счет: <span id="final-score">0</span></p>
+                    <form id="name-form" class="name-form">
+                        <input type="text" id="player-name" placeholder="Введите ваше имя" maxlength="20" required>
+                        <button type="submit" class="btn btn-primary">
+                            <span class="btn-icon">💾</span>
+                            Сохранить результат
+                        </button>
+                    </form>
+                    <div id="save-success" class="save-success hidden">
+                        <p>✅ Ваш рекорд сохранен!</p>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button id="restart" class="btn btn-secondary">
+                        <span class="btn-icon">🔄</span>
+                        Начать заново
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <div id="leaders-modal" class="modal hidden">
+            <div class="modal-content leaders-content">
+                <div class="modal-header">
+                    <h2>🏆 Таблица лидеров</h2>
+                    <button id="close-leaders" class="close-btn">×</button>
+                </div>
+                <div class="leaders-list">
+                    <table id="leaders-table">
+                        <thead>
+                            <tr>
+                                <th>Место</th>
+                                <th>Имя</th>
+                                <th>Счет</th>
+                                <th>Дата</th>
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button id="close-leaders-btn" class="btn btn-primary">Закрыть</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
